k8s-hybris/hybris-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hybris
  name: hybris
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hybris
    spec:
      containers:
        - name: hybris
          image: pacteradeg/hybris-ootb-redis:b2c-minio-1808
          ports:
          - containerPort: 9002
          resources: {}
          volumeMounts:
          - name: hybris-override
            mountPath: /opt/hybris/config/override/10-local.properties
            subPath: 10-local.properties
      volumes:
        - name: hybris-override
          configMap:
            name: hybris-override-config
