k8s-hybris/hybris-all-aws.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hybris
  name: hybris
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hybris
    spec:
      containers:
        - name: hybris
          image: pacteradeg/hybris-ootb:b2c-minio-1808
          ports:
          - containerPort: 9002
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
          - name: hybris-config
            mountPath: /opt/hybris/config/local.properties
            subPath: local.properties
          - name: hybris-override
            mountPath: /opt/hybris/config/override/10-local.properties
            subPath: 10-local.properties
      volumes:
        - name: hybris-config
          configMap:
            name: hybris-config
        - name: hybris-override
          configMap:
            name: hybris-override-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hybris
  name: hybris
spec:
  type: ClusterIP
  ports:
  - name: hybris
    port: 443
    targetPort: 9002
  selector:
    app: hybris
