k8s-hybris/hybris-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hybris
  name: hybris-service
spec:
  type: ClusterIP
  ports:
  - name: hybris
    port: 9002
    targetPort: 9002
  selector:
    app: hybris
