k8s-hybris/hybris-all.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hybris
  name: hybris
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hybris
    spec:
      containers:
        - name: hybris
          image: pacteradeg/hybris-ootb-redis:b2c-minio-1808
          ports:
          - containerPort: 9002
          resources: {}
          volumeMounts:
          - name: hybris-override
            mountPath: /opt/hybris/config/override/10-local.properties
            subPath: 10-local.properties
      volumes:
        - name: hybris-override
          configMap:
            name: hybris-override-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hybris
  name: hybris-service
spec:
  type: ClusterIP
  ports:
  - name: hybris
    port: 9002
    targetPort: 9002
  selector:
    app: hybris
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: hybris
spec:
  rules:
  - host: hybris-admin.local
    http:
      paths:
      - path: /
        backend:
          serviceName: hybris
          servicePort: 9002
  - host: elecronics.local
    http:
      paths:
      - path: /yacceleratorstorefront
        backend:
          serviceName: hybris
          servicePort: 9002
  - host: hybris-backoffice.local
    http:
      paths:
      - path: /backoffice
        backend:
          serviceName: hybris
          servicePort: 9002
